@@ -112,7 +112,7 @@ public class CSV2SerialAdapterDialogTabItem extends CTabItem {
 			// 0=voltageReceiver, 1=voltage, 2=current, 3=capacity, 4=power, 5=energy, 6=votagePerCell, 7=revolutionSpeed, 8=efficiency, 9=height, 10=slope, 11=a1Value, 12=a2Value, 13=a3Value
 			List<MeasurementType> measurementTypes = this.device.getChannelMeasuremtsReplacedNames(this.channelConfigNumber);
 			for (int i = 0; i < measurementTypes.size(); i++) {
-				this.measurementControls.add(new MeasurementControlConfigurable(mainTabComposite, this.dialog, this.channelConfigNumber, i, measurementTypes.get(i), this.device, 1, GDE.STRING_BLANK + i, ""));
+				this.measurementControls.add(new MeasurementControlConfigurable(mainTabComposite, this.dialog, this.channelConfigNumber, i, measurementTypes.get(i), this.device, 1, GDE.STRING_BLANK + i, GDE.STRING_EMPTY));
 			}
 		}
 		scolledComposite.addControlListener(new ControlListener() {
