@@ -19,6 +19,7 @@ Generic changes/fixes
 	* UsbPortImpl cleanup code, remove unchecked warning, add dump methods
 	* add LibUsb library code which is closer to hardware and enable use of productString as additional USB-HID constrain
 	* update XSD to enable additional UsbPort productString
+	* refine semi automatic detection of scale synchronization reference
 
 Device specific changes/fixes
 	* Graupner Polaron* - adapt number of transfered bytes to latest specification (Firmware 2.x required)
